@@ -1,3 +1,8 @@
+2013-05-07  Jayant Sonar  <jayant.sonar@kpitcummins.com>
+	    Kaushik Phatak <Kaushik.Phatak@kpitcummins.com>
+
+	* armemu.c (ARMul_Emulate32): Emulate instructions MOVW and MOVT.
+
 2012-12-19  Joel Brobecker  <brobecker@adacore.com>
 
 	* COPYING: Update to GPL version 3.
